Fixed minor logic bug, updated some doc

--- a/simple.cfg
+++ b/simple.cfg
@@ -47,10 +47,11 @@ collection_short_name = ML-V
 force_collection_name = False
 
 [xml]
-comment = Share - don't steal - this data
 validate = True
 pretty = False
 merge_ids = False
+xsl_url=updateinfo.xsl
 # relative paths are relative to repobase/repodata
 # absolute paths are absolute
 filename = updateinfo.xml
+comment = Share - don't steal - this data
