--- a/simple.cfg
+++ b/simple.cfg
@@ -19,8 +19,13 @@ my_id_prefix=YY
 
 # updateinfo_scrape_to_updateinfo.py looks for this line
 scrapefile=somefile
+
 # SL_contrib_to_updateinfo.py looks for this line
 yamldir=somedir
+
+# updateinfo_from_srpms.py uses these
+release_date=1970-01-01 00:00:00
+srpm_dir=/path/to/some/srpms
 
 [ref_hints]
 # here are some examples
@@ -50,6 +55,7 @@ force_collection_name = False
 validate = True
 pretty = False
 merge_ids = False
+# This really must be a valid url, pretend it is an <a href="">
 xsl_url=updateinfo.xsl
 # relative paths are relative to repobase/repodata
 # absolute paths are absolute
