now you can select an alternate sum easily for older releases (like EL5)

--- a/simple.cfg
+++ b/simple.cfg
@@ -5,6 +5,9 @@ import_existing = True
 has_metainfo = False
 update_repo = True
 
+# some repos only support older sums (like EL5 should be md5)
+default_sum = 'sha256'
+
 # src_url_base is optional, but encouraged
 src_url_base = http://my.example.com/SRPMS/
 
